<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LupaPassword">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_arrow_top_reset"
        android:layout_width="32dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/ic_back_arrow"
        android:contentDescription="@string/top_drivo_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="34dp"
        android:contentDescription="@string/top_i_icon"
        android:src="@drawable/ic_i"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back_arrow_top_reset"
        android:layout_alignParentStart="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="31dp"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_arrow_top_reset" />

    <TextView
        android:id="@+id/text_masuk_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reset_password"
        android:layout_marginStart="22dp"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/gilroy_regular"
        android:text="@string/input_email_reset"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password" />

    <TextView
        android:id="@+id/email_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_masuk_description"
        android:layout_alignParentStart="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/email_judul"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="313dp" />

    <TextView
        android:id="@+id/email_judul_bintang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_masuk_description"
        android:layout_marginStart="2dp"
        android:layout_marginTop="36dp"
        android:layout_toEndOf="@+id/email_judul"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/atribut_bintang"
        android:textColor="@color/redist"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/email_judul"
        tools:layout_editor_absoluteY="310dp" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_judul"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@drawable/text_input_bg"
        android:fontFamily="@font/gilroy_bold"
        android:hint="@string/nama_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_below="@+id/input_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="282dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/mulai_button"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/lanjutkan"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email"
        app:layout_constraintVertical_bias="0.185" />


</RelativeLayout>