<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="274dp"
    android:layout_height="216dp"
    android:layout_marginStart="4dp"
    android:layout_marginBottom="180dp"
    android:layout_marginTop="24dp"
    android:clickable="true"
    android:focusable="true"
    android:elevation="20dp"
    android:background="@drawable/cars_card_white">

    <ImageView
        android:id="@+id/item_mobil_preview"
        android:layout_width="225dp"
        android:layout_height="136dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/mobil"
        android:padding="2dp"
        android:scaleType="fitCenter"
        android:src="@drawable/mobil_1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/item_mobil_preview"
        android:paddingStart="11dp"
        android:paddingEnd="11dp">

        <TextView
            android:id="@+id/nama_mobil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/gilroy_semibold"
            android:maxLines="1"
            android:text="@string/ford"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RatingBar
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nama_mobil"
            android:layout_marginStart="8dp"
            android:isIndicator="true"
            android:numStars="1"
            android:rating="1"
            android:theme="@style/RatingBar" />

        <TextView
            android:id="@+id/car_item_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nama_mobil"
            android:layout_marginStart="27dp"
            android:fontFamily="@font/gilroy_medium"
            android:maxLines="1"
            android:text="@string/_4_6"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/car_item_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nama_mobil"
            android:layout_marginStart="50dp"
            android:fontFamily="@font/gilroy_medium"
            android:maxLines="1"
            android:text="@string/review"
            android:textColor="@color/black_soft"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/car_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nama_mobil"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/gilroy_medium"
            android:maxLines="1"
            android:text="@string/_1_2jt_hari"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </RelativeLayout>

</RelativeLayout>