<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.drivo.GetStarted">


    <ImageView
        android:id="@+id/drivo_logo_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="29dp"
        android:src="@drawable/drivo_logo_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/drivo_logo" />

    <TextView
        android:id="@+id/get_started_text"
        android:layout_width="415dp"
        android:layout_height="289dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:fontFamily="@font/gilroy_medium"
        android:text="@string/cari_dan_sewa_mobil"
        android:textColor="@color/purple"
        android:textSize="66sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drivo_logo_horizontal" />

    <ImageView
        android:id="@+id/get_started_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_started_text"
        app:srcCompat="@drawable/mobil_get_started"
        android:contentDescription="@string/mobil_intro" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/get_started_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:text="@string/mulai"
        android:textColor="@color/white"
        android:background="@drawable/mulai_button"
        android:fontFamily="@font/gilroy_bold"
        android:textSize="18sp"
        android:backgroundTint="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="22dp"
        android:textAllCaps="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>