<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Daftar">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_arrow_top_daftar"
        android:layout_width="32dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/ic_back_arrow"
        android:contentDescription="@string/top_drivo_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="34dp"
        android:contentDescription="@string/top_i_icon"
        android:src="@drawable/ic_i"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_daftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back_arrow_top_daftar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="54dp"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/daftar"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_daftar_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_daftar"
        android:layout_marginStart="22dp"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/gilroy_regular"
        android:text="@string/daftar_desc"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_daftar" />

    <TextView
        android:id="@+id/nama_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_daftar_description"
        android:layout_alignParentStart="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/nama_daftar"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="313dp" />

    <TextView
        android:id="@+id/nama_judul_bintang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_daftar_description"
        android:layout_marginStart="2dp"
        android:layout_marginTop="32dp"
        android:layout_toEndOf="@+id/nama_judul"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/atribut_bintang"
        android:textColor="@color/redist"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/nama_judul"
        tools:layout_editor_absoluteY="310dp" />

    <EditText
        android:id="@+id/input_nama_daftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nama_judul"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/text_input_bg"
        android:fontFamily="@font/gilroy_bold"
        android:hint="@string/nama_misal"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/email_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_nama_daftar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/email_judul"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="313dp" />

    <TextView
        android:id="@+id/email_judul_bintang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_nama_daftar"
        android:layout_marginStart="2dp"
        android:layout_marginTop="31dp"
        android:layout_toEndOf="@+id/email_judul"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/atribut_bintang"
        android:textColor="@color/redist"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/nama_judul"
        tools:layout_editor_absoluteY="310dp" />

    <EditText
        android:id="@+id/input_email_daftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_judul"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/text_input_bg"
        android:fontFamily="@font/gilroy_bold"
        android:hint="@string/nama_email_misal_daftar"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/no_telp_daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_email_daftar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/nomor_telepon"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="313dp" />

    <TextView
        android:id="@+id/notelp_judul_bintang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_email_daftar"
        android:layout_marginStart="2dp"
        android:layout_marginTop="32dp"
        android:layout_toEndOf="@+id/no_telp_daftar"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/atribut_bintang"
        android:textColor="@color/redist"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/nama_judul"
        tools:layout_editor_absoluteY="310dp" />

    <EditText
        android:id="@+id/input_no_telp_daftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/no_telp_daftar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/text_input_bg"
        android:fontFamily="@font/gilroy_bold"
        android:hint="@string/no_telp"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_daftar"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:layout_below="@+id/input_no_telp_daftar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="317dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="33dp"
        android:background="@drawable/ic_next_arrrow_button"
        android:elevation="12dp"
        tools:ignore="SpeakableTextPresentCheck" />

</RelativeLayout>